// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu demo examples Snapshots: basic 1`] = `
.emotion-37 {
  overflow: hidden;
}

.emotion-37 > div {
  background-color: #ffffff;
  float: left;
  margin: 0 0.5rem 0.5rem 0;
  width: 14em;
}

.emotion-36 {
  box-sizing: border-box;
  color: #333840;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
}

.emotion-36 *,
.emotion-36 *::before,
.emotion-36 *::after {
  box-sizing: inherit;
}

.emotion-4 {
  color: #333840;
  cursor: pointer;
  font-weight: 400;
  padding: 0.5em 1em;
}

.emotion-4:focus {
  outline: 0;
}

.emotion-4[aria-selected="true"] {
  background-color: #f0f5fc;
  font-weight: 700;
}

.emotion-4[aria-selected="true"]:active {
  background-color: #accbfc;
}

.emotion-4 [role="img"] {
  box-sizing: content-box;
  color: #3272d9;
  display: block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.emotion-4 [role="img"]:first-child {
  margin-right: 0.5em;
}

.emotion-4 [role="img"]:last-child {
  margin-left: 0.5em;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0.1875em 0 0.25em;
  white-space: normal;
  word-break: break-all;
}

.emotion-0 {
  font-size: 0.875em;
  margin-right: 0.5714285714285714em;
  word-break: break-word;
}

.emotion-1 {
  color: #58606e;
  font-size: 0.6875em;
  padding-top: 0.18181818181818182em;
  word-break: break-word;
}

.emotion-35 {
  margin: 0.5em 0;
}

.emotion-35:first-child,
.emotion-35 + .emotion-35 {
  margin-top: 0;
}

.emotion-35:last-child {
  margin-bottom: 0;
}

.emotion-10 {
  font-size: 0.6875em;
  font-weight: 700;
  margin: 0;
  padding: 1.4545454545454546em 1.4545454545454546em 0.7272727272727273em;
}

.emotion-11 {
  fill: currentcolor;
  font-size: 16px;
  height: 1.5em;
  width: 1.5em;
}

.emotion-23 {
  background-color: #c8d1e0;
  height: 1px;
  margin: 0.5em 0;
}

.emotion-29 {
  color: #de1b1b;
  cursor: pointer;
  font-weight: 400;
  padding: 0.5em 1em;
}

.emotion-29:focus {
  background-color: #faf0f0;
  outline: 0;
}

.emotion-29:hover {
  background-color: #faf0f0;
}

.emotion-29:active {
  background-color: #fad4d4;
}

.emotion-29[aria-selected="true"] {
  background-color: #f0f5fc;
  font-weight: 700;
}

.emotion-29[aria-selected="true"]:active {
  background-color: #accbfc;
}

.emotion-29 [role="img"] {
  box-sizing: content-box;
  color: #de1b1b;
  display: block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.emotion-29 [role="img"]:first-child {
  margin-right: 0.5em;
}

.emotion-29 [role="img"]:last-child {
  margin-left: 0.5em;
}

.emotion-34 {
  color: #afbacc;
  cursor: default;
  font-weight: 400;
  padding: 0.5em 1em;
}

.emotion-34:focus {
  outline: 0;
}

.emotion-34[aria-selected="true"] {
  background-color: #f0f5fc;
  font-weight: 700;
}

.emotion-34 [role="img"] {
  box-sizing: content-box;
  display: block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.emotion-34 [role="img"]:first-child {
  margin-right: 0.5em;
}

.emotion-34 [role="img"]:last-child {
  margin-left: 0.5em;
}

<Styled(div)>
  <div
    className="emotion-37"
  >
    <Menu>
      <Menu>
        <div
          className="emotion-36"
        >
          <MenuItem
            onClick={[Function]}
          >
            <MenuItem
              onClick={[Function]}
              onKeyDown={[Function]}
              tabIndex={0}
            >
              <div
                className="emotion-4"
                onClick={[Function]}
                onKeyDown={[Function]}
                tabIndex={0}
              >
                <Styled(span)>
                  <span
                    className="emotion-3"
                  >
                    <Styled(span)>
                      <span
                        className="emotion-2"
                      >
                        <Styled(span)>
                          <span
                            className="emotion-0"
                          >
                            Menu item with onClick
                          </span>
                        </Styled(span)>
                        <Styled(span)>
                          <span
                            className="emotion-1"
                          />
                        </Styled(span)>
                      </span>
                    </Styled(span)>
                  </span>
                </Styled(span)>
              </div>
            </MenuItem>
          </MenuItem>
          <MenuItem
            secondaryText="Secondary text"
          >
            <MenuItem
              onKeyDown={[Function]}
              secondaryText="Secondary text"
              tabIndex={0}
            >
              <div
                className="emotion-4"
                onKeyDown={[Function]}
                tabIndex={0}
              >
                <Styled(span)>
                  <span
                    className="emotion-3"
                  >
                    <Styled(span)>
                      <span
                        className="emotion-2"
                      >
                        <Styled(span)>
                          <span
                            className="emotion-0"
                          >
                            Menu item
                          </span>
                        </Styled(span)>
                        <Styled(span)>
                          <span
                            className="emotion-1"
                          >
                            Secondary text
                          </span>
                        </Styled(span)>
                      </span>
                    </Styled(span)>
                  </span>
                </Styled(span)>
              </div>
            </MenuItem>
          </MenuItem>
          <MenuGroup
            title="Group Title"
          >
            <MenuGroup>
              <div
                className="emotion-35"
              >
                <MenuGroupTitle>
                  <MenuGroupTitle>
                    <h3
                      className="emotion-10"
                    >
                      Group Title
                    </h3>
                  </MenuGroupTitle>
                </MenuGroupTitle>
                <MenuItem
                  iconStart={<IconCloud />}
                >
                  <MenuItem
                    iconStart={<IconCloud />}
                    onKeyDown={[Function]}
                    tabIndex={0}
                  >
                    <div
                      className="emotion-4"
                      onKeyDown={[Function]}
                      tabIndex={0}
                    >
                      <Styled(span)>
                        <span
                          className="emotion-3"
                        >
                          <IconCloud
                            key="iconStart"
                            size="1.5em"
                          >
                            <Icon
                              rtl={false}
                              size="1.5em"
                            >
                              <Styled(svg)
                                aria-hidden={true}
                                focusable="false"
                                role="img"
                                rtl={false}
                                size="1.5em"
                                viewBox="0 0 24 24"
                              >
                                <svg
                                  aria-hidden={true}
                                  className="emotion-11"
                                  focusable="false"
                                  role="img"
                                  viewBox="0 0 24 24"
                                >
                                  <g>
                                    <path
                                      d="M19.35 10.04A7.49 7.49 0 0 0 12 4C9.11 4 6.6 5.64 5.35 8.04A5.994 5.994 0 0 0 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96z"
                                    />
                                  </g>
                                </svg>
                              </Styled(svg)>
                            </Icon>
                          </IconCloud>
                          <Styled(span)>
                            <span
                              className="emotion-2"
                            >
                              <Styled(span)>
                                <span
                                  className="emotion-0"
                                >
                                  Icon at start
                                </span>
                              </Styled(span)>
                              <Styled(span)>
                                <span
                                  className="emotion-1"
                                />
                              </Styled(span)>
                            </span>
                          </Styled(span)>
                        </span>
                      </Styled(span)>
                    </div>
                  </MenuItem>
                </MenuItem>
                <MenuItem
                  iconEnd={<IconCloud />}
                >
                  <MenuItem
                    iconEnd={<IconCloud />}
                    onKeyDown={[Function]}
                    tabIndex={0}
                  >
                    <div
                      className="emotion-4"
                      onKeyDown={[Function]}
                      tabIndex={0}
                    >
                      <Styled(span)>
                        <span
                          className="emotion-3"
                        >
                          <Styled(span)>
                            <span
                              className="emotion-2"
                            >
                              <Styled(span)>
                                <span
                                  className="emotion-0"
                                >
                                  Icon at end
                                </span>
                              </Styled(span)>
                              <Styled(span)>
                                <span
                                  className="emotion-1"
                                />
                              </Styled(span)>
                            </span>
                          </Styled(span)>
                          <IconCloud
                            key="iconEnd"
                            size="1.5em"
                          >
                            <Icon
                              rtl={false}
                              size="1.5em"
                            >
                              <Styled(svg)
                                aria-hidden={true}
                                focusable="false"
                                role="img"
                                rtl={false}
                                size="1.5em"
                                viewBox="0 0 24 24"
                              >
                                <svg
                                  aria-hidden={true}
                                  className="emotion-11"
                                  focusable="false"
                                  role="img"
                                  viewBox="0 0 24 24"
                                >
                                  <g>
                                    <path
                                      d="M19.35 10.04A7.49 7.49 0 0 0 12 4C9.11 4 6.6 5.64 5.35 8.04A5.994 5.994 0 0 0 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96z"
                                    />
                                  </g>
                                </svg>
                              </Styled(svg)>
                            </Icon>
                          </IconCloud>
                        </span>
                      </Styled(span)>
                    </div>
                  </MenuItem>
                </MenuItem>
                <MenuDivider>
                  <MenuDivider
                    role="separator"
                  >
                    <div
                      className="emotion-23"
                      role="separator"
                    />
                  </MenuDivider>
                </MenuDivider>
                <MenuItem
                  variant="danger"
                >
                  <MenuItem
                    onKeyDown={[Function]}
                    tabIndex={0}
                    variant="danger"
                  >
                    <div
                      className="emotion-29"
                      onKeyDown={[Function]}
                      tabIndex={0}
                    >
                      <Styled(span)>
                        <span
                          className="emotion-3"
                        >
                          <IconDanger
                            size="1.5em"
                          >
                            <Icon
                              rtl={false}
                              size="1.5em"
                            >
                              <Styled(svg)
                                aria-hidden={true}
                                focusable="false"
                                role="img"
                                rtl={false}
                                size="1.5em"
                                viewBox="0 0 24 24"
                              >
                                <svg
                                  aria-hidden={true}
                                  className="emotion-11"
                                  focusable="false"
                                  role="img"
                                  viewBox="0 0 24 24"
                                >
                                  <g>
                                    <path
                                      d="M3.94 19.49h16.118a1 1 0 0 0 .866-1.498l-8.06-13.99a.996.996 0 0 0-1.732-.001L3.074 17.993a.998.998 0 0 0 .867 1.499zM12 17a1 1 0 1 1 0-2 1 1 0 0 1 0 2zm1-3.503h-2v-5h2v5z"
                                    />
                                  </g>
                                </svg>
                              </Styled(svg)>
                            </Icon>
                          </IconDanger>
                          <Styled(span)>
                            <span
                              className="emotion-2"
                            >
                              <Styled(span)>
                                <span
                                  className="emotion-0"
                                >
                                  Danger variant
                                </span>
                              </Styled(span)>
                              <Styled(span)>
                                <span
                                  className="emotion-1"
                                />
                              </Styled(span)>
                            </span>
                          </Styled(span)>
                        </span>
                      </Styled(span)>
                    </div>
                  </MenuItem>
                </MenuItem>
                <MenuItem
                  disabled={true}
                  onClick={[Function]}
                >
                  <MenuItem
                    disabled={true}
                    tabIndex="-1"
                  >
                    <div
                      className="emotion-34"
                      tabIndex="-1"
                    >
                      <Styled(span)>
                        <span
                          className="emotion-3"
                        >
                          <Styled(span)>
                            <span
                              className="emotion-2"
                            >
                              <Styled(span)>
                                <span
                                  className="emotion-0"
                                >
                                  Disabled menu item
                                </span>
                              </Styled(span)>
                              <Styled(span)>
                                <span
                                  className="emotion-1"
                                />
                              </Styled(span)>
                            </span>
                          </Styled(span)>
                        </span>
                      </Styled(span)>
                    </div>
                  </MenuItem>
                </MenuItem>
              </div>
            </MenuGroup>
          </MenuGroup>
        </div>
      </Menu>
    </Menu>
  </div>
</Styled(div)>
`;

exports[`Menu demo examples Snapshots: custom-item 1`] = `
.emotion-20 {
  overflow: hidden;
}

.emotion-20 > div {
  background-color: #ffffff;
  float: left;
  margin: 0 0.5rem 0.5rem 0;
  width: 14em;
}

.emotion-19 {
  box-sizing: border-box;
  color: #333840;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
}

.emotion-19 *,
.emotion-19 *::before,
.emotion-19 *::after {
  box-sizing: inherit;
}

.emotion-18 {
  margin: 0.5em 0;
}

.emotion-18:first-child,
.emotion-18 + .emotion-18 {
  margin-top: 0;
}

.emotion-18:last-child {
  margin-bottom: 0;
}

.emotion-5 {
  box-sizing: border-box;
  color: #333840;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0.5em 1em;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-5 *,
.emotion-5 *::before,
.emotion-5 *::after {
  box-sizing: inherit;
}

.emotion-5:focus {
  background-color: #cfe0fc;
  outline: 0;
}

.emotion-5:hover {
  background-color: #cfe0fc;
}

.emotion-5:active {
  background-color: #84b1fa;
}

.emotion-1 {
  display: block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  height: 2.25em;
  margin-right: 0.5em;
  width: 2.25em;
}

.emotion-0 {
  box-sizing: border-box;
  color: #ffffff;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 2.5em;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 100%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 700;
  height: 2.5em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  width: 2.5em;
  display: block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  height: 2.25em;
  margin-right: 0.5em;
  width: 2.25em;
}

.emotion-0 *,
.emotion-0 *::before,
.emotion-0 *::after {
  box-sizing: inherit;
}

.emotion-0 > abbr,
.emotion-0 > span {
  font-size: 1.125em;
}

.emotion-0 > abbr {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0 > img {
  border-radius: 100%;
  display: block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  max-width: 100%;
}

.emotion-0 > [role="img"] {
  color: #ffffff;
}

.emotion-4 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  font-size: 0.875em;
  white-space: normal;
  word-break: break-all;
}

.emotion-3 {
  color: #58606e;
  display: block;
  font-size: 0.6875em;
  margin-top: 0.25em;
}

<Component>
  <Styled(div)>
    <div
      className="emotion-20"
    >
      <Menu
        data={
          Array [
            Object {
              "avatar": "/images/avatar.svg",
              "text": "Newton",
              "work": "Principia Mathematica",
            },
            Object {
              "avatar": "/images/avatar.svg",
              "text": "Descartes",
              "work": "La Géométrie",
            },
            Object {
              "avatar": "/images/avatar.svg",
              "text": "Euclid",
              "work": "Elements",
            },
          ]
        }
        item={[Function]}
        itemKey="text"
      >
        <Menu
          item={[Function]}
          itemKey="text"
        >
          <div
            className="emotion-19"
          >
            <MenuGroup
              key="0"
            >
              <MenuGroup>
                <div
                  className="emotion-18"
                >
                  <MenuItem
                    avatar="/images/avatar.svg"
                    index={0}
                    isHighlighted={false}
                    item={
                      Object {
                        "avatar": "/images/avatar.svg",
                        "text": "Newton",
                        "work": "Principia Mathematica",
                      }
                    }
                    key="Newton"
                    render={[Function]}
                    text="Newton"
                    work="Principia Mathematica"
                  >
                    <CustomItem
                      avatar="/images/avatar.svg"
                      index={0}
                      isHighlighted={false}
                      item={
                        Object {
                          "avatar": "/images/avatar.svg",
                          "text": "Newton",
                          "work": "Principia Mathematica",
                        }
                      }
                      onKeyDown={[Function]}
                      tabIndex={0}
                      text="Newton"
                      work="Principia Mathematica"
                    >
                      <Styled(div)
                        avatar="/images/avatar.svg"
                        index={0}
                        isHighlighted={false}
                        item={
                          Object {
                            "avatar": "/images/avatar.svg",
                            "text": "Newton",
                            "work": "Principia Mathematica",
                          }
                        }
                        onKeyDown={[Function]}
                        tabIndex={0}
                        text="Newton"
                        work="Principia Mathematica"
                      >
                        <div
                          className="emotion-5"
                          onKeyDown={[Function]}
                          tabIndex={0}
                        >
                          <Styled(Avatar)
                            shape="circle"
                            size="large"
                          >
                            <Avatar
                              className="emotion-1"
                              shape="circle"
                              size="large"
                            >
                              <Avatar
                                className="emotion-1"
                                noBackground={true}
                                shape="circle"
                                size="large"
                              >
                                <span
                                  className="emotion-0"
                                >
                                  <img
                                    alt="Newton"
                                    src="/images/avatar.svg"
                                  />
                                </span>
                              </Avatar>
                            </Avatar>
                          </Styled(Avatar)>
                          <Styled(span)>
                            <span
                              className="emotion-4"
                            >
                              Newton
                              <Styled(span)>
                                <span
                                  className="emotion-3"
                                >
                                  Principia Mathematica
                                </span>
                              </Styled(span)>
                            </span>
                          </Styled(span)>
                        </div>
                      </Styled(div)>
                    </CustomItem>
                  </MenuItem>
                  <MenuItem
                    avatar="/images/avatar.svg"
                    index={1}
                    isHighlighted={false}
                    item={
                      Object {
                        "avatar": "/images/avatar.svg",
                        "text": "Descartes",
                        "work": "La Géométrie",
                      }
                    }
                    key="Descartes"
                    render={[Function]}
                    text="Descartes"
                    work="La Géométrie"
                  >
                    <CustomItem
                      avatar="/images/avatar.svg"
                      index={1}
                      isHighlighted={false}
                      item={
                        Object {
                          "avatar": "/images/avatar.svg",
                          "text": "Descartes",
                          "work": "La Géométrie",
                        }
                      }
                      onKeyDown={[Function]}
                      tabIndex={0}
                      text="Descartes"
                      work="La Géométrie"
                    >
                      <Styled(div)
                        avatar="/images/avatar.svg"
                        index={1}
                        isHighlighted={false}
                        item={
                          Object {
                            "avatar": "/images/avatar.svg",
                            "text": "Descartes",
                            "work": "La Géométrie",
                          }
                        }
                        onKeyDown={[Function]}
                        tabIndex={0}
                        text="Descartes"
                        work="La Géométrie"
                      >
                        <div
                          className="emotion-5"
                          onKeyDown={[Function]}
                          tabIndex={0}
                        >
                          <Styled(Avatar)
                            shape="circle"
                            size="large"
                          >
                            <Avatar
                              className="emotion-1"
                              shape="circle"
                              size="large"
                            >
                              <Avatar
                                className="emotion-1"
                                noBackground={true}
                                shape="circle"
                                size="large"
                              >
                                <span
                                  className="emotion-0"
                                >
                                  <img
                                    alt="Descartes"
                                    src="/images/avatar.svg"
                                  />
                                </span>
                              </Avatar>
                            </Avatar>
                          </Styled(Avatar)>
                          <Styled(span)>
                            <span
                              className="emotion-4"
                            >
                              Descartes
                              <Styled(span)>
                                <span
                                  className="emotion-3"
                                >
                                  La Géométrie
                                </span>
                              </Styled(span)>
                            </span>
                          </Styled(span)>
                        </div>
                      </Styled(div)>
                    </CustomItem>
                  </MenuItem>
                  <MenuItem
                    avatar="/images/avatar.svg"
                    index={2}
                    isHighlighted={false}
                    item={
                      Object {
                        "avatar": "/images/avatar.svg",
                        "text": "Euclid",
                        "work": "Elements",
                      }
                    }
                    key="Euclid"
                    render={[Function]}
                    text="Euclid"
                    work="Elements"
                  >
                    <CustomItem
                      avatar="/images/avatar.svg"
                      index={2}
                      isHighlighted={false}
                      item={
                        Object {
                          "avatar": "/images/avatar.svg",
                          "text": "Euclid",
                          "work": "Elements",
                        }
                      }
                      onKeyDown={[Function]}
                      tabIndex={0}
                      text="Euclid"
                      work="Elements"
                    >
                      <Styled(div)
                        avatar="/images/avatar.svg"
                        index={2}
                        isHighlighted={false}
                        item={
                          Object {
                            "avatar": "/images/avatar.svg",
                            "text": "Euclid",
                            "work": "Elements",
                          }
                        }
                        onKeyDown={[Function]}
                        tabIndex={0}
                        text="Euclid"
                        work="Elements"
                      >
                        <div
                          className="emotion-5"
                          onKeyDown={[Function]}
                          tabIndex={0}
                        >
                          <Styled(Avatar)
                            shape="circle"
                            size="large"
                          >
                            <Avatar
                              className="emotion-1"
                              shape="circle"
                              size="large"
                            >
                              <Avatar
                                className="emotion-1"
                                noBackground={true}
                                shape="circle"
                                size="large"
                              >
                                <span
                                  className="emotion-0"
                                >
                                  <img
                                    alt="Euclid"
                                    src="/images/avatar.svg"
                                  />
                                </span>
                              </Avatar>
                            </Avatar>
                          </Styled(Avatar)>
                          <Styled(span)>
                            <span
                              className="emotion-4"
                            >
                              Euclid
                              <Styled(span)>
                                <span
                                  className="emotion-3"
                                >
                                  Elements
                                </span>
                              </Styled(span)>
                            </span>
                          </Styled(span)>
                        </div>
                      </Styled(div)>
                    </CustomItem>
                  </MenuItem>
                </div>
              </MenuGroup>
            </MenuGroup>
          </div>
        </Menu>
      </Menu>
    </div>
  </Styled(div)>
</Component>
`;

exports[`Menu demo examples Snapshots: data 1`] = `
.emotion-36 {
  overflow: hidden;
}

.emotion-36 > div {
  background-color: #ffffff;
  float: left;
  margin: 0 0.5rem 0.5rem 0;
  width: 14em;
}

.emotion-35 {
  box-sizing: border-box;
  color: #333840;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
}

.emotion-35 *,
.emotion-35 *::before,
.emotion-35 *::after {
  box-sizing: inherit;
}

.emotion-4 {
  color: #333840;
  cursor: pointer;
  font-weight: 400;
  padding: 0.5em 1em;
}

.emotion-4:focus {
  outline: 0;
}

.emotion-4[aria-selected="true"] {
  background-color: #f0f5fc;
  font-weight: 700;
}

.emotion-4[aria-selected="true"]:active {
  background-color: #accbfc;
}

.emotion-4 [role="img"] {
  box-sizing: content-box;
  color: #3272d9;
  display: block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.emotion-4 [role="img"]:first-child {
  margin-right: 0.5em;
}

.emotion-4 [role="img"]:last-child {
  margin-left: 0.5em;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0.1875em 0 0.25em;
  white-space: normal;
  word-break: break-all;
}

.emotion-0 {
  font-size: 0.875em;
  margin-right: 0.5714285714285714em;
  word-break: break-word;
}

.emotion-1 {
  color: #58606e;
  font-size: 0.6875em;
  padding-top: 0.18181818181818182em;
  word-break: break-word;
}

.emotion-34 {
  margin: 0.5em 0;
}

.emotion-34:first-child,
.emotion-34 + .emotion-34 {
  margin-top: 0;
}

.emotion-34:last-child {
  margin-bottom: 0;
}

.emotion-10 {
  fill: currentcolor;
  font-size: 16px;
  height: 1.5em;
  width: 1.5em;
}

.emotion-22 {
  background-color: #c8d1e0;
  height: 1px;
  margin: 0.5em 0;
}

.emotion-28 {
  color: #de1b1b;
  cursor: pointer;
  font-weight: 400;
  padding: 0.5em 1em;
}

.emotion-28:focus {
  background-color: #faf0f0;
  outline: 0;
}

.emotion-28:hover {
  background-color: #faf0f0;
}

.emotion-28:active {
  background-color: #fad4d4;
}

.emotion-28[aria-selected="true"] {
  background-color: #f0f5fc;
  font-weight: 700;
}

.emotion-28[aria-selected="true"]:active {
  background-color: #accbfc;
}

.emotion-28 [role="img"] {
  box-sizing: content-box;
  color: #de1b1b;
  display: block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.emotion-28 [role="img"]:first-child {
  margin-right: 0.5em;
}

.emotion-28 [role="img"]:last-child {
  margin-left: 0.5em;
}

.emotion-33 {
  color: #afbacc;
  cursor: default;
  font-weight: 400;
  padding: 0.5em 1em;
}

.emotion-33:focus {
  outline: 0;
}

.emotion-33[aria-selected="true"] {
  background-color: #f0f5fc;
  font-weight: 700;
}

.emotion-33 [role="img"] {
  box-sizing: content-box;
  display: block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.emotion-33 [role="img"]:first-child {
  margin-right: 0.5em;
}

.emotion-33 [role="img"]:last-child {
  margin-left: 0.5em;
}

<Component>
  <Styled(div)>
    <div
      className="emotion-36"
    >
      <Menu
        data={
          Array [
            Object {
              "onClick": [Function],
              "text": "Menu item with onClick",
            },
            Object {
              "secondaryText": "Secondary text",
              "text": "Menu item",
            },
            Object {
              "iconStart": <IconCloud />,
              "text": "Icon at start",
            },
            Object {
              "iconEnd": <IconCloud />,
              "text": "Icon at end",
            },
            Object {
              "divider": true,
            },
            Object {
              "text": "Danger variant",
              "variant": "danger",
            },
            Object {
              "disabled": true,
              "onClick": [Function],
              "text": "Disabled menu item",
            },
          ]
        }
        itemKey="text"
      >
        <Menu
          itemKey="text"
        >
          <div
            className="emotion-35"
          >
            <MenuGroup
              key="0"
            >
              <MenuGroup>
                <div
                  className="emotion-34"
                >
                  <MenuItem
                    index={0}
                    isHighlighted={false}
                    item={
                      Object {
                        "onClick": [Function],
                        "text": "Menu item with onClick",
                      }
                    }
                    key="Menu item with onClick"
                    onClick={[Function]}
                    text="Menu item with onClick"
                  >
                    <MenuItem
                      index={0}
                      isHighlighted={false}
                      item={
                        Object {
                          "onClick": [Function],
                          "text": "Menu item with onClick",
                        }
                      }
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      tabIndex={0}
                      text="Menu item with onClick"
                    >
                      <div
                        className="emotion-4"
                        onClick={[Function]}
                        onKeyDown={[Function]}
                        tabIndex={0}
                      >
                        <Styled(span)>
                          <span
                            className="emotion-3"
                          >
                            <Styled(span)>
                              <span
                                className="emotion-2"
                              >
                                <Styled(span)>
                                  <span
                                    className="emotion-0"
                                  >
                                    Menu item with onClick
                                  </span>
                                </Styled(span)>
                                <Styled(span)>
                                  <span
                                    className="emotion-1"
                                  />
                                </Styled(span)>
                              </span>
                            </Styled(span)>
                          </span>
                        </Styled(span)>
                      </div>
                    </MenuItem>
                  </MenuItem>
                  <MenuItem
                    index={1}
                    isHighlighted={false}
                    item={
                      Object {
                        "secondaryText": "Secondary text",
                        "text": "Menu item",
                      }
                    }
                    key="Menu item"
                    secondaryText="Secondary text"
                    text="Menu item"
                  >
                    <MenuItem
                      index={1}
                      isHighlighted={false}
                      item={
                        Object {
                          "secondaryText": "Secondary text",
                          "text": "Menu item",
                        }
                      }
                      onKeyDown={[Function]}
                      secondaryText="Secondary text"
                      tabIndex={0}
                      text="Menu item"
                    >
                      <div
                        className="emotion-4"
                        onKeyDown={[Function]}
                        tabIndex={0}
                      >
                        <Styled(span)>
                          <span
                            className="emotion-3"
                          >
                            <Styled(span)>
                              <span
                                className="emotion-2"
                              >
                                <Styled(span)>
                                  <span
                                    className="emotion-0"
                                  >
                                    Menu item
                                  </span>
                                </Styled(span)>
                                <Styled(span)>
                                  <span
                                    className="emotion-1"
                                  >
                                    Secondary text
                                  </span>
                                </Styled(span)>
                              </span>
                            </Styled(span)>
                          </span>
                        </Styled(span)>
                      </div>
                    </MenuItem>
                  </MenuItem>
                  <MenuItem
                    iconStart={<IconCloud />}
                    index={2}
                    isHighlighted={false}
                    item={
                      Object {
                        "iconStart": <IconCloud />,
                        "text": "Icon at start",
                      }
                    }
                    key="Icon at start"
                    text="Icon at start"
                  >
                    <MenuItem
                      iconStart={<IconCloud />}
                      index={2}
                      isHighlighted={false}
                      item={
                        Object {
                          "iconStart": <IconCloud />,
                          "text": "Icon at start",
                        }
                      }
                      onKeyDown={[Function]}
                      tabIndex={0}
                      text="Icon at start"
                    >
                      <div
                        className="emotion-4"
                        onKeyDown={[Function]}
                        tabIndex={0}
                      >
                        <Styled(span)>
                          <span
                            className="emotion-3"
                          >
                            <IconCloud
                              key="iconStart"
                              size="1.5em"
                            >
                              <Icon
                                rtl={false}
                                size="1.5em"
                              >
                                <Styled(svg)
                                  aria-hidden={true}
                                  focusable="false"
                                  role="img"
                                  rtl={false}
                                  size="1.5em"
                                  viewBox="0 0 24 24"
                                >
                                  <svg
                                    aria-hidden={true}
                                    className="emotion-10"
                                    focusable="false"
                                    role="img"
                                    viewBox="0 0 24 24"
                                  >
                                    <g>
                                      <path
                                        d="M19.35 10.04A7.49 7.49 0 0 0 12 4C9.11 4 6.6 5.64 5.35 8.04A5.994 5.994 0 0 0 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96z"
                                      />
                                    </g>
                                  </svg>
                                </Styled(svg)>
                              </Icon>
                            </IconCloud>
                            <Styled(span)>
                              <span
                                className="emotion-2"
                              >
                                <Styled(span)>
                                  <span
                                    className="emotion-0"
                                  >
                                    Icon at start
                                  </span>
                                </Styled(span)>
                                <Styled(span)>
                                  <span
                                    className="emotion-1"
                                  />
                                </Styled(span)>
                              </span>
                            </Styled(span)>
                          </span>
                        </Styled(span)>
                      </div>
                    </MenuItem>
                  </MenuItem>
                  <MenuItem
                    iconEnd={<IconCloud />}
                    index={3}
                    isHighlighted={false}
                    item={
                      Object {
                        "iconEnd": <IconCloud />,
                        "text": "Icon at end",
                      }
                    }
                    key="Icon at end"
                    text="Icon at end"
                  >
                    <MenuItem
                      iconEnd={<IconCloud />}
                      index={3}
                      isHighlighted={false}
                      item={
                        Object {
                          "iconEnd": <IconCloud />,
                          "text": "Icon at end",
                        }
                      }
                      onKeyDown={[Function]}
                      tabIndex={0}
                      text="Icon at end"
                    >
                      <div
                        className="emotion-4"
                        onKeyDown={[Function]}
                        tabIndex={0}
                      >
                        <Styled(span)>
                          <span
                            className="emotion-3"
                          >
                            <Styled(span)>
                              <span
                                className="emotion-2"
                              >
                                <Styled(span)>
                                  <span
                                    className="emotion-0"
                                  >
                                    Icon at end
                                  </span>
                                </Styled(span)>
                                <Styled(span)>
                                  <span
                                    className="emotion-1"
                                  />
                                </Styled(span)>
                              </span>
                            </Styled(span)>
                            <IconCloud
                              key="iconEnd"
                              size="1.5em"
                            >
                              <Icon
                                rtl={false}
                                size="1.5em"
                              >
                                <Styled(svg)
                                  aria-hidden={true}
                                  focusable="false"
                                  role="img"
                                  rtl={false}
                                  size="1.5em"
                                  viewBox="0 0 24 24"
                                >
                                  <svg
                                    aria-hidden={true}
                                    className="emotion-10"
                                    focusable="false"
                                    role="img"
                                    viewBox="0 0 24 24"
                                  >
                                    <g>
                                      <path
                                        d="M19.35 10.04A7.49 7.49 0 0 0 12 4C9.11 4 6.6 5.64 5.35 8.04A5.994 5.994 0 0 0 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96z"
                                      />
                                    </g>
                                  </svg>
                                </Styled(svg)>
                              </Icon>
                            </IconCloud>
                          </span>
                        </Styled(span)>
                      </div>
                    </MenuItem>
                  </MenuItem>
                  <MenuDivider
                    key="4"
                  >
                    <MenuDivider
                      role="separator"
                    >
                      <div
                        className="emotion-22"
                        role="separator"
                      />
                    </MenuDivider>
                  </MenuDivider>
                  <MenuItem
                    index={4}
                    isHighlighted={false}
                    item={
                      Object {
                        "text": "Danger variant",
                        "variant": "danger",
                      }
                    }
                    key="Danger variant"
                    text="Danger variant"
                    variant="danger"
                  >
                    <MenuItem
                      index={4}
                      isHighlighted={false}
                      item={
                        Object {
                          "text": "Danger variant",
                          "variant": "danger",
                        }
                      }
                      onKeyDown={[Function]}
                      tabIndex={0}
                      text="Danger variant"
                      variant="danger"
                    >
                      <div
                        className="emotion-28"
                        onKeyDown={[Function]}
                        tabIndex={0}
                      >
                        <Styled(span)>
                          <span
                            className="emotion-3"
                          >
                            <IconDanger
                              size="1.5em"
                            >
                              <Icon
                                rtl={false}
                                size="1.5em"
                              >
                                <Styled(svg)
                                  aria-hidden={true}
                                  focusable="false"
                                  role="img"
                                  rtl={false}
                                  size="1.5em"
                                  viewBox="0 0 24 24"
                                >
                                  <svg
                                    aria-hidden={true}
                                    className="emotion-10"
                                    focusable="false"
                                    role="img"
                                    viewBox="0 0 24 24"
                                  >
                                    <g>
                                      <path
                                        d="M3.94 19.49h16.118a1 1 0 0 0 .866-1.498l-8.06-13.99a.996.996 0 0 0-1.732-.001L3.074 17.993a.998.998 0 0 0 .867 1.499zM12 17a1 1 0 1 1 0-2 1 1 0 0 1 0 2zm1-3.503h-2v-5h2v5z"
                                      />
                                    </g>
                                  </svg>
                                </Styled(svg)>
                              </Icon>
                            </IconDanger>
                            <Styled(span)>
                              <span
                                className="emotion-2"
                              >
                                <Styled(span)>
                                  <span
                                    className="emotion-0"
                                  >
                                    Danger variant
                                  </span>
                                </Styled(span)>
                                <Styled(span)>
                                  <span
                                    className="emotion-1"
                                  />
                                </Styled(span)>
                              </span>
                            </Styled(span)>
                          </span>
                        </Styled(span)>
                      </div>
                    </MenuItem>
                  </MenuItem>
                  <MenuItem
                    disabled={true}
                    index={5}
                    isHighlighted={false}
                    item={
                      Object {
                        "disabled": true,
                        "onClick": [Function],
                        "text": "Disabled menu item",
                      }
                    }
                    key="Disabled menu item"
                    onClick={[Function]}
                    text="Disabled menu item"
                  >
                    <MenuItem
                      disabled={true}
                      index={5}
                      isHighlighted={false}
                      item={
                        Object {
                          "disabled": true,
                          "onClick": [Function],
                          "text": "Disabled menu item",
                        }
                      }
                      tabIndex="-1"
                      text="Disabled menu item"
                    >
                      <div
                        className="emotion-33"
                        tabIndex="-1"
                      >
                        <Styled(span)>
                          <span
                            className="emotion-3"
                          >
                            <Styled(span)>
                              <span
                                className="emotion-2"
                              >
                                <Styled(span)>
                                  <span
                                    className="emotion-0"
                                  >
                                    Disabled menu item
                                  </span>
                                </Styled(span)>
                                <Styled(span)>
                                  <span
                                    className="emotion-1"
                                  />
                                </Styled(span)>
                              </span>
                            </Styled(span)>
                          </span>
                        </Styled(span)>
                      </div>
                    </MenuItem>
                  </MenuItem>
                </div>
              </MenuGroup>
            </MenuGroup>
          </div>
        </Menu>
      </Menu>
    </div>
  </Styled(div)>
</Component>
`;

exports[`Menu demo examples Snapshots: grouped-data 1`] = `
.emotion-38 {
  overflow: hidden;
}

.emotion-38 > div {
  background-color: #ffffff;
  float: left;
  margin: 0 0.5rem 0.5rem 0;
  width: 14em;
}

.emotion-37 {
  box-sizing: border-box;
  color: #333840;
  font-family: "Open Sans",-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
}

.emotion-37 *,
.emotion-37 *::before,
.emotion-37 *::after {
  box-sizing: inherit;
}

.emotion-4 {
  color: #333840;
  cursor: pointer;
  font-weight: 400;
  padding: 0.5em 1em;
}

.emotion-4:focus {
  outline: 0;
}

.emotion-4[aria-selected="true"] {
  background-color: #f0f5fc;
  font-weight: 700;
}

.emotion-4[aria-selected="true"]:active {
  background-color: #accbfc;
}

.emotion-4 [role="img"] {
  box-sizing: content-box;
  color: #3272d9;
  display: block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.emotion-4 [role="img"]:first-child {
  margin-right: 0.5em;
}

.emotion-4 [role="img"]:last-child {
  margin-left: 0.5em;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0.1875em 0 0.25em;
  white-space: normal;
  word-break: break-all;
}

.emotion-0 {
  font-size: 0.875em;
  margin-right: 0.5714285714285714em;
  word-break: break-word;
}

.emotion-1 {
  color: #58606e;
  font-size: 0.6875em;
  padding-top: 0.18181818181818182em;
  word-break: break-word;
}

.emotion-10 {
  margin: 0.5em 0;
}

.emotion-10:first-child,
.emotion-10 + .emotion-10 {
  margin-top: 0;
}

.emotion-10:last-child {
  margin-bottom: 0;
}

.emotion-11 {
  font-size: 0.6875em;
  font-weight: 700;
  margin: 0;
  padding: 1.4545454545454546em 1.4545454545454546em 0.7272727272727273em;
}

.emotion-12 {
  fill: currentcolor;
  font-size: 16px;
  height: 1.5em;
  width: 1.5em;
}

.emotion-24 {
  background-color: #c8d1e0;
  height: 1px;
  margin: 0.5em 0;
}

.emotion-30 {
  color: #de1b1b;
  cursor: pointer;
  font-weight: 400;
  padding: 0.5em 1em;
}

.emotion-30:focus {
  background-color: #faf0f0;
  outline: 0;
}

.emotion-30:hover {
  background-color: #faf0f0;
}

.emotion-30:active {
  background-color: #fad4d4;
}

.emotion-30[aria-selected="true"] {
  background-color: #f0f5fc;
  font-weight: 700;
}

.emotion-30[aria-selected="true"]:active {
  background-color: #accbfc;
}

.emotion-30 [role="img"] {
  box-sizing: content-box;
  color: #de1b1b;
  display: block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.emotion-30 [role="img"]:first-child {
  margin-right: 0.5em;
}

.emotion-30 [role="img"]:last-child {
  margin-left: 0.5em;
}

.emotion-35 {
  color: #afbacc;
  cursor: default;
  font-weight: 400;
  padding: 0.5em 1em;
}

.emotion-35:focus {
  outline: 0;
}

.emotion-35[aria-selected="true"] {
  background-color: #f0f5fc;
  font-weight: 700;
}

.emotion-35 [role="img"] {
  box-sizing: content-box;
  display: block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.emotion-35 [role="img"]:first-child {
  margin-right: 0.5em;
}

.emotion-35 [role="img"]:last-child {
  margin-left: 0.5em;
}

<Component>
  <Styled(div)>
    <div
      className="emotion-38"
    >
      <Menu
        data={
          Array [
            Object {
              "items": Array [
                Object {
                  "onClick": [Function],
                  "text": "Menu item with onClick",
                },
                Object {
                  "secondaryText": "Secondary text",
                  "text": "Menu item",
                },
              ],
            },
            Object {
              "items": Array [
                Object {
                  "iconStart": <IconCloud />,
                  "text": "Icon at start",
                },
                Object {
                  "iconEnd": <IconCloud />,
                  "text": "Icon at end",
                },
                Object {
                  "divider": true,
                },
                Object {
                  "text": "Danger variant",
                  "variant": "danger",
                },
                Object {
                  "disabled": true,
                  "onClick": [Function],
                  "text": "Disabled menu item",
                },
              ],
              "title": "Group Title",
            },
          ]
        }
        itemKey="text"
      >
        <Menu
          itemKey="text"
        >
          <div
            className="emotion-37"
          >
            <MenuGroup
              key="0"
            >
              <MenuGroup>
                <div
                  className="emotion-10"
                >
                  <MenuItem
                    index={0}
                    isHighlighted={false}
                    item={
                      Object {
                        "onClick": [Function],
                        "text": "Menu item with onClick",
                      }
                    }
                    key="Menu item with onClick"
                    onClick={[Function]}
                    text="Menu item with onClick"
                  >
                    <MenuItem
                      index={0}
                      isHighlighted={false}
                      item={
                        Object {
                          "onClick": [Function],
                          "text": "Menu item with onClick",
                        }
                      }
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      tabIndex={0}
                      text="Menu item with onClick"
                    >
                      <div
                        className="emotion-4"
                        onClick={[Function]}
                        onKeyDown={[Function]}
                        tabIndex={0}
                      >
                        <Styled(span)>
                          <span
                            className="emotion-3"
                          >
                            <Styled(span)>
                              <span
                                className="emotion-2"
                              >
                                <Styled(span)>
                                  <span
                                    className="emotion-0"
                                  >
                                    Menu item with onClick
                                  </span>
                                </Styled(span)>
                                <Styled(span)>
                                  <span
                                    className="emotion-1"
                                  />
                                </Styled(span)>
                              </span>
                            </Styled(span)>
                          </span>
                        </Styled(span)>
                      </div>
                    </MenuItem>
                  </MenuItem>
                  <MenuItem
                    index={1}
                    isHighlighted={false}
                    item={
                      Object {
                        "secondaryText": "Secondary text",
                        "text": "Menu item",
                      }
                    }
                    key="Menu item"
                    secondaryText="Secondary text"
                    text="Menu item"
                  >
                    <MenuItem
                      index={1}
                      isHighlighted={false}
                      item={
                        Object {
                          "secondaryText": "Secondary text",
                          "text": "Menu item",
                        }
                      }
                      onKeyDown={[Function]}
                      secondaryText="Secondary text"
                      tabIndex={0}
                      text="Menu item"
                    >
                      <div
                        className="emotion-4"
                        onKeyDown={[Function]}
                        tabIndex={0}
                      >
                        <Styled(span)>
                          <span
                            className="emotion-3"
                          >
                            <Styled(span)>
                              <span
                                className="emotion-2"
                              >
                                <Styled(span)>
                                  <span
                                    className="emotion-0"
                                  >
                                    Menu item
                                  </span>
                                </Styled(span)>
                                <Styled(span)>
                                  <span
                                    className="emotion-1"
                                  >
                                    Secondary text
                                  </span>
                                </Styled(span)>
                              </span>
                            </Styled(span)>
                          </span>
                        </Styled(span)>
                      </div>
                    </MenuItem>
                  </MenuItem>
                </div>
              </MenuGroup>
            </MenuGroup>
            <MenuGroup
              key="1"
              title="Group Title"
            >
              <MenuGroup>
                <div
                  className="emotion-10"
                >
                  <MenuGroupTitle>
                    <MenuGroupTitle>
                      <h3
                        className="emotion-11"
                      >
                        Group Title
                      </h3>
                    </MenuGroupTitle>
                  </MenuGroupTitle>
                  <MenuItem
                    iconStart={<IconCloud />}
                    index={2}
                    isHighlighted={false}
                    item={
                      Object {
                        "iconStart": <IconCloud />,
                        "text": "Icon at start",
                      }
                    }
                    key="Icon at start"
                    text="Icon at start"
                  >
                    <MenuItem
                      iconStart={<IconCloud />}
                      index={2}
                      isHighlighted={false}
                      item={
                        Object {
                          "iconStart": <IconCloud />,
                          "text": "Icon at start",
                        }
                      }
                      onKeyDown={[Function]}
                      tabIndex={0}
                      text="Icon at start"
                    >
                      <div
                        className="emotion-4"
                        onKeyDown={[Function]}
                        tabIndex={0}
                      >
                        <Styled(span)>
                          <span
                            className="emotion-3"
                          >
                            <IconCloud
                              key="iconStart"
                              size="1.5em"
                            >
                              <Icon
                                rtl={false}
                                size="1.5em"
                              >
                                <Styled(svg)
                                  aria-hidden={true}
                                  focusable="false"
                                  role="img"
                                  rtl={false}
                                  size="1.5em"
                                  viewBox="0 0 24 24"
                                >
                                  <svg
                                    aria-hidden={true}
                                    className="emotion-12"
                                    focusable="false"
                                    role="img"
                                    viewBox="0 0 24 24"
                                  >
                                    <g>
                                      <path
                                        d="M19.35 10.04A7.49 7.49 0 0 0 12 4C9.11 4 6.6 5.64 5.35 8.04A5.994 5.994 0 0 0 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96z"
                                      />
                                    </g>
                                  </svg>
                                </Styled(svg)>
                              </Icon>
                            </IconCloud>
                            <Styled(span)>
                              <span
                                className="emotion-2"
                              >
                                <Styled(span)>
                                  <span
                                    className="emotion-0"
                                  >
                                    Icon at start
                                  </span>
                                </Styled(span)>
                                <Styled(span)>
                                  <span
                                    className="emotion-1"
                                  />
                                </Styled(span)>
                              </span>
                            </Styled(span)>
                          </span>
                        </Styled(span)>
                      </div>
                    </MenuItem>
                  </MenuItem>
                  <MenuItem
                    iconEnd={<IconCloud />}
                    index={3}
                    isHighlighted={false}
                    item={
                      Object {
                        "iconEnd": <IconCloud />,
                        "text": "Icon at end",
                      }
                    }
                    key="Icon at end"
                    text="Icon at end"
                  >
                    <MenuItem
                      iconEnd={<IconCloud />}
                      index={3}
                      isHighlighted={false}
                      item={
                        Object {
                          "iconEnd": <IconCloud />,
                          "text": "Icon at end",
                        }
                      }
                      onKeyDown={[Function]}
                      tabIndex={0}
                      text="Icon at end"
                    >
                      <div
                        className="emotion-4"
                        onKeyDown={[Function]}
                        tabIndex={0}
                      >
                        <Styled(span)>
                          <span
                            className="emotion-3"
                          >
                            <Styled(span)>
                              <span
                                className="emotion-2"
                              >
                                <Styled(span)>
                                  <span
                                    className="emotion-0"
                                  >
                                    Icon at end
                                  </span>
                                </Styled(span)>
                                <Styled(span)>
                                  <span
                                    className="emotion-1"
                                  />
                                </Styled(span)>
                              </span>
                            </Styled(span)>
                            <IconCloud
                              key="iconEnd"
                              size="1.5em"
                            >
                              <Icon
                                rtl={false}
                                size="1.5em"
                              >
                                <Styled(svg)
                                  aria-hidden={true}
                                  focusable="false"
                                  role="img"
                                  rtl={false}
                                  size="1.5em"
                                  viewBox="0 0 24 24"
                                >
                                  <svg
                                    aria-hidden={true}
                                    className="emotion-12"
                                    focusable="false"
                                    role="img"
                                    viewBox="0 0 24 24"
                                  >
                                    <g>
                                      <path
                                        d="M19.35 10.04A7.49 7.49 0 0 0 12 4C9.11 4 6.6 5.64 5.35 8.04A5.994 5.994 0 0 0 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96z"
                                      />
                                    </g>
                                  </svg>
                                </Styled(svg)>
                              </Icon>
                            </IconCloud>
                          </span>
                        </Styled(span)>
                      </div>
                    </MenuItem>
                  </MenuItem>
                  <MenuDivider
                    key="4"
                  >
                    <MenuDivider
                      role="separator"
                    >
                      <div
                        className="emotion-24"
                        role="separator"
                      />
                    </MenuDivider>
                  </MenuDivider>
                  <MenuItem
                    index={4}
                    isHighlighted={false}
                    item={
                      Object {
                        "text": "Danger variant",
                        "variant": "danger",
                      }
                    }
                    key="Danger variant"
                    text="Danger variant"
                    variant="danger"
                  >
                    <MenuItem
                      index={4}
                      isHighlighted={false}
                      item={
                        Object {
                          "text": "Danger variant",
                          "variant": "danger",
                        }
                      }
                      onKeyDown={[Function]}
                      tabIndex={0}
                      text="Danger variant"
                      variant="danger"
                    >
                      <div
                        className="emotion-30"
                        onKeyDown={[Function]}
                        tabIndex={0}
                      >
                        <Styled(span)>
                          <span
                            className="emotion-3"
                          >
                            <IconDanger
                              size="1.5em"
                            >
                              <Icon
                                rtl={false}
                                size="1.5em"
                              >
                                <Styled(svg)
                                  aria-hidden={true}
                                  focusable="false"
                                  role="img"
                                  rtl={false}
                                  size="1.5em"
                                  viewBox="0 0 24 24"
                                >
                                  <svg
                                    aria-hidden={true}
                                    className="emotion-12"
                                    focusable="false"
                                    role="img"
                                    viewBox="0 0 24 24"
                                  >
                                    <g>
                                      <path
                                        d="M3.94 19.49h16.118a1 1 0 0 0 .866-1.498l-8.06-13.99a.996.996 0 0 0-1.732-.001L3.074 17.993a.998.998 0 0 0 .867 1.499zM12 17a1 1 0 1 1 0-2 1 1 0 0 1 0 2zm1-3.503h-2v-5h2v5z"
                                      />
                                    </g>
                                  </svg>
                                </Styled(svg)>
                              </Icon>
                            </IconDanger>
                            <Styled(span)>
                              <span
                                className="emotion-2"
                              >
                                <Styled(span)>
                                  <span
                                    className="emotion-0"
                                  >
                                    Danger variant
                                  </span>
                                </Styled(span)>
                                <Styled(span)>
                                  <span
                                    className="emotion-1"
                                  />
                                </Styled(span)>
                              </span>
                            </Styled(span)>
                          </span>
                        </Styled(span)>
                      </div>
                    </MenuItem>
                  </MenuItem>
                  <MenuItem
                    disabled={true}
                    index={5}
                    isHighlighted={false}
                    item={
                      Object {
                        "disabled": true,
                        "onClick": [Function],
                        "text": "Disabled menu item",
                      }
                    }
                    key="Disabled menu item"
                    onClick={[Function]}
                    text="Disabled menu item"
                  >
                    <MenuItem
                      disabled={true}
                      index={5}
                      isHighlighted={false}
                      item={
                        Object {
                          "disabled": true,
                          "onClick": [Function],
                          "text": "Disabled menu item",
                        }
                      }
                      tabIndex="-1"
                      text="Disabled menu item"
                    >
                      <div
                        className="emotion-35"
                        tabIndex="-1"
                      >
                        <Styled(span)>
                          <span
                            className="emotion-3"
                          >
                            <Styled(span)>
                              <span
                                className="emotion-2"
                              >
                                <Styled(span)>
                                  <span
                                    className="emotion-0"
                                  >
                                    Disabled menu item
                                  </span>
                                </Styled(span)>
                                <Styled(span)>
                                  <span
                                    className="emotion-1"
                                  />
                                </Styled(span)>
                              </span>
                            </Styled(span)>
                          </span>
                        </Styled(span)>
                      </div>
                    </MenuItem>
                  </MenuItem>
                </div>
              </MenuGroup>
            </MenuGroup>
          </div>
        </Menu>
      </Menu>
    </div>
  </Styled(div)>
</Component>
`;

exports[`Menu item prop calls item prop with expected arguments 1`] = `
Array [
  Object {
    "props": Object {
      "children": "Item 1",
      "disabled": undefined,
      "index": 0,
      "isHighlighted": false,
      "item": Object {
        "text": "Item 1",
      },
      "onClick": undefined,
      "onKeyDown": [Function],
      "tabIndex": 0,
      "text": "Item 1",
    },
  },
]
`;
